--- a/budgeting-app/src/menu.css
+++ b/budgeting-app/src/menu.css
@@ -10,7 +10,8 @@
 
 /* MENU BAR */
 .menuBar {
-  position: sticky;
+  position: fixed;
+  width: 100%;
   display: flex;
   height: 50px;
   justify-content: flex-end;
@@ -51,53 +52,4 @@
   font-size: 34px;
   color: rgb(226, 186, 40);
   background-color: transparent;
-}
-
-/* DROPDOWN BAR */
-
-.dropDown {
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: rgb(29, 28, 28);
-  top: 50.75px;
-  bottom: 0px;
-  left: 0;
-  width: 175px;
-  overflow: hidden;
-  transition: 850ms;
-  grid-area: "sidebar content";
-  
-}
-
-.dropDown.active {
-  left: 0;
-  transform: 250ms;
-}
-
-.dropDown li{
-  display: inline-block;
-  padding: 0px, 20px;
-  margin: 16px;
-}
-
-.dropDown li a {
-  transition: all 0.3s ease;
-}
-
-.dropDown li a:hover {
-  color: rgb(236, 190, 27);
-}
-
-.dropDown button {
-  margin-top: auto;
-  margin-bottom: 20px;
-  transition: all 0.3s ease;
-}
-
-.dropDown button:hover {
-  color: rgb(236, 190, 27);
-  cursor: pointer;
 }
